# IPass-GUI

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: enableISync.html  index.html  main.js  main.rs  pwprompt.js  settings.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
